k8s/base/nats.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats
  namespace: pedidos-veloz
spec:
  replicas: 1
  selector: { matchLabels: { app: nats } }
  template:
    metadata: { labels: { app: nats } }
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile: { type: RuntimeDefault }
      containers:
        - name: nats
          image: nats:2.10-alpine
          args: ["-js"]
          ports: [{ containerPort: 4222 }]
          securityContext:
            allowPrivilegeEscalation: false
            capabilities: { drop: ["ALL"] }
---
apiVersion: v1
kind: Service
metadata:
  name: nats
  namespace: pedidos-veloz
spec:
  selector: { app: nats }
  ports: [{ port: 4222 }]
